# encoding-module-win11sdk

./: CMakeLists.txt  README.md  encoding-module-win11sdk.cpp  encoding-module-win11sdk.h
include/: decoder.h  player.h
include/media_engine/: api.h
src/api/: c_interface.cpp
src/core/: decoder.cpp
src/platform/windows/: renderer.cpp
tests/: test_decoder.cpp
